blackbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox
  namespace: observation
spec:
  selector:
    app: blackbox
  ports:
    - port: 80
      targetPort: 9115
