blackbox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blackbox
  namespace: observation
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blackbox.lab-hc.cloud`)
      kind: Rule
      services:
        - name: blackbox
          port: 80
